--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Here you can find the articles that I have published.
+subtitle: Many more ideas are unfinished or unwritten, some snippets can be found on my Twitter.
 use-site-title: true
 ---
 
