--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: Here you can find the articles that I have published.
-subtitle: Many more ideas are unfinished or unwritten, some snippets can be found on my Twitter.
+title: Articles
+subtitle: Many more ideas are unfinished or unwritten,  
+some snippets can be found on my Twitter.
 use-site-title: true
 ---
 
