--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: Articles
-subtitle: Many more ideas are unfinished or unwritten,  
-some snippets can be found on my Twitter.
+subtitle: Many more ideas are unfinished or unwritten, some snippets can be found on my Twitter.
 use-site-title: true
 ---
 
