--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Articles
-subtitle: Many more ideas are unfinished or unwritten, some snippets can be found on my Twitter.
+subtitle: You can follow me on Twitter (@danzn1) for more ideas and visualizations.
 use-site-title: true
 ---
 
